{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 24,
  "lineage": "341a4f64-0b0b-d66e-3136-820810a20473",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afa630b1fea9995a",
            "association_id": "eipassoc-0de332638d92214c7",
            "domain": "vpc",
            "id": "eipalloc-0afa630b1fea9995a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-048114b583a4f487c",
            "private_dns": "ip-10-0-6-2.ap-south-1.compute.internal",
            "private_ip": "10.0.6.2",
            "public_dns": "ec2-13-126-240-66.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.240.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1"
            },
            "tags_all": {
              "Name": "eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bc2f0f5b35b7670",
            "association_id": "eipassoc-02d436d596e947b91",
            "domain": "vpc",
            "id": "eipalloc-08bc2f0f5b35b7670",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ee291a07a23b6484",
            "private_dns": "ip-192-168-4-25.ap-south-1.compute.internal",
            "private_ip": "192.168.4.25",
            "public_dns": "ec2-52-66-22-153.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.22.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip2"
            },
            "tags_all": {
              "Name": "eip2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:internet-gateway/igw-0254d763503c4ca26",
            "id": "igw-0254d763503c4ca26",
            "owner_id": "808704889487",
            "tags": {
              "Name": "igw1"
            },
            "tags_all": {
              "Name": "igw1"
            },
            "vpc_id": "vpc-0a7d0014858b648c7"
          },
          "dependencies": [
            "aws_vpc.main_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:internet-gateway/igw-01b064522ebdcb04b",
            "id": "igw-01b064522ebdcb04b",
            "owner_id": "808704889487",
            "tags": {
              "Name": "igw2"
            },
            "tags_all": {
              "Name": "igw2"
            },
            "vpc_id": "vpc-0a9e003e0167d67af"
          },
          "dependencies": [
            "aws_vpc.main_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afa630b1fea9995a",
            "association_id": "eipassoc-0de332638d92214c7",
            "connectivity_type": "public",
            "id": "nat-06599eb7940a2895d",
            "network_interface_id": "eni-048114b583a4f487c",
            "private_ip": "10.0.6.2",
            "public_ip": "13.126.240.66",
            "subnet_id": "subnet-0c7178ad5fa847771",
            "tags": {
              "Name": "nat_gw_1"
            },
            "tags_all": {
              "Name": "nat_gw_1"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw1",
            "aws_subnet.pub_sub_1",
            "aws_vpc.main_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bc2f0f5b35b7670",
            "association_id": "eipassoc-02d436d596e947b91",
            "connectivity_type": "public",
            "id": "nat-0669c0c132d873327",
            "network_interface_id": "eni-0ee291a07a23b6484",
            "private_ip": "192.168.4.25",
            "public_ip": "52.66.22.153",
            "subnet_id": "subnet-004641119f355fa6e",
            "tags": {
              "Name": "nat_gw_2"
            },
            "tags_all": {
              "Name": "nat_gw_2"
            }
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw1",
            "aws_subnet.pub_sub_2",
            "aws_vpc.main_vpc_1",
            "aws_vpc.main_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:route-table/rtb-07d00ef9631faaa60",
            "id": "rtb-07d00ef9631faaa60",
            "owner_id": "808704889487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06599eb7940a2895d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv_rt_1"
            },
            "tags_all": {
              "Name": "priv_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7d0014858b648c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc_1",
            "aws_eip.eip1",
            "aws_internet_gateway.igw1",
            "aws_nat_gateway.nat_gw_1",
            "aws_subnet.pub_sub_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:route-table/rtb-00882b7c4cefd5d3d",
            "id": "rtb-00882b7c4cefd5d3d",
            "owner_id": "808704889487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0669c0c132d873327",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv_rt_2"
            },
            "tags_all": {
              "Name": "priv_rt_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9e003e0167d67af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.pub_sub_2",
            "aws_vpc.main_vpc_1",
            "aws_vpc.main_vpc_2",
            "aws_eip.eip2",
            "aws_internet_gateway.igw1",
            "aws_nat_gateway.nat_gw_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:route-table/rtb-00ee27adba056ff38",
            "id": "rtb-00ee27adba056ff38",
            "owner_id": "808704889487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0254d763503c4ca26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt_1"
            },
            "tags_all": {
              "Name": "pub_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7d0014858b648c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.main_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:route-table/rtb-02580c4c436bf88bb",
            "id": "rtb-02580c4c436bf88bb",
            "owner_id": "808704889487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b064522ebdcb04b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt_2"
            },
            "tags_all": {
              "Name": "pub_rt_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9e003e0167d67af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_vpc.main_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_asso_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b660690e7424cf6",
            "route_table_id": "rtb-07d00ef9631faaa60",
            "subnet_id": "subnet-0adb05004078b86d8"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.priv_rt_1",
            "aws_subnet.priv_sub_1",
            "aws_subnet.pub_sub_1",
            "aws_vpc.main_vpc_1",
            "aws_eip.eip1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_asso_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8a6c80765027d33",
            "route_table_id": "rtb-00882b7c4cefd5d3d",
            "subnet_id": "subnet-067e96f64c478b5fb"
          },
          "dependencies": [
            "aws_route_table.priv_rt_2",
            "aws_subnet.priv_sub_2",
            "aws_subnet.pub_sub_2",
            "aws_vpc.main_vpc_1",
            "aws_vpc.main_vpc_2",
            "aws_eip.eip2",
            "aws_internet_gateway.igw1",
            "aws_nat_gateway.nat_gw_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_asso_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfde76a0d1f870d4",
            "route_table_id": "rtb-00ee27adba056ff38",
            "subnet_id": "subnet-0c7178ad5fa847771"
          },
          "dependencies": [
            "aws_route_table.pub_rt_1",
            "aws_subnet.pub_sub_1",
            "aws_vpc.main_vpc_1",
            "aws_internet_gateway.igw1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_asso_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a341428d136b0343",
            "route_table_id": "rtb-02580c4c436bf88bb",
            "subnet_id": "subnet-004641119f355fa6e"
          },
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_route_table.pub_rt_2",
            "aws_subnet.pub_sub_2",
            "aws_vpc.main_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:subnet/subnet-0adb05004078b86d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb05004078b86d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808704889487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub_1"
            },
            "tags_all": {
              "Name": "priv_sub_1"
            },
            "vpc_id": "vpc-0a7d0014858b648c7"
          },
          "dependencies": [
            "aws_vpc.main_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:subnet/subnet-067e96f64c478b5fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067e96f64c478b5fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808704889487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_sub_2"
            },
            "tags_all": {
              "Name": "priv_sub_2"
            },
            "vpc_id": "vpc-0a9e003e0167d67af"
          },
          "dependencies": [
            "aws_vpc.main_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:subnet/subnet-0c7178ad5fa847771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7178ad5fa847771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808704889487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_1"
            },
            "tags_all": {
              "Name": "pub_sub_1"
            },
            "vpc_id": "vpc-0a7d0014858b648c7"
          },
          "dependencies": [
            "aws_vpc.main_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:subnet/subnet-004641119f355fa6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004641119f355fa6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808704889487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_2"
            },
            "tags_all": {
              "Name": "pub_sub_2"
            },
            "vpc_id": "vpc-0a9e003e0167d67af"
          },
          "dependencies": [
            "aws_vpc.main_vpc_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:vpc/vpc-0a7d0014858b648c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0d20b7753bc913ae6",
            "default_route_table_id": "rtb-057cfbf4a6ebd8b4c",
            "default_security_group_id": "sg-009cad312ef825671",
            "dhcp_options_id": "dopt-0daaf5acd0866d71b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7d0014858b648c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057cfbf4a6ebd8b4c",
            "owner_id": "808704889487",
            "tags": {
              "Name": "main_vpc_1"
            },
            "tags_all": {
              "Name": "main_vpc_1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:808704889487:vpc/vpc-0a9e003e0167d67af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-007629045efe3c9d5",
            "default_route_table_id": "rtb-05580fdab849a9be4",
            "default_security_group_id": "sg-0aa29e46e1b6117de",
            "dhcp_options_id": "dopt-0daaf5acd0866d71b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9e003e0167d67af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05580fdab849a9be4",
            "owner_id": "808704889487",
            "tags": {
              "Name": "main_vpc_2"
            },
            "tags_all": {
              "Name": "main_vpc_2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peer_1_n_2_SRSA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0580093e9abaae8fa",
            "peer_owner_id": "808704889487",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0a9e003e0167d67af",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc_peer_1_n_2_SRSA"
            },
            "tags_all": {
              "Name": "vpc_peer_1_n_2_SRSA"
            },
            "vpc_id": "vpc-0a7d0014858b648c7"
          },
          "dependencies": [
            "aws_vpc.main_vpc_1",
            "aws_vpc.main_vpc_2"
          ]
        }
      ]
    }
  ]
}